syntax = "proto3";

package GatewayPackage;

service UserService {
    rpc getAllUsers(Empty) returns (Users) {}
    rpc getUserById(UserId) returns (User) {}
    rpc getUserLogin(UserLogin) returns (LoginResponse) {}
    rpc GetUserNetworkLogin(UserNetworkLogin) returns (LoginResponse) {}
    
    rpc createUser(User) returns (User) {}
    rpc updateUser (update) returns (User) {}
    rpc deleteUser (UserId) returns (User) {}
    rpc verifyUser (UserId) returns (User) {}
    rpc userBan (UserId) returns (User) {}
}

service UserProductService {
    rpc getAllProducts (UserId) returns (Products) {}
    rpc getTotalPrice (UserId) returns (stream TotalPrice) {}

    rpc addProduct (UserProductRequest) returns (UserProduct) {}
    rpc removeProduct (UserProductRequest) returns (UserProduct) {}
    rpc deleteAmount (UserProductRequest) returns (UserProduct) {}
}

service UserFavsService {
    rpc getAllUserFavs (UserId) returns (Products) {}

    rpc addToFavs (UserFavorites) returns (Favorite) {}
    rpc deleteFav (UserFavorites) returns (Favorite) {}
}

service ProductsService {
    rpc getAllProducts(Empty) returns (Products) {}
    rpc getProductById(ProductId) returns (Product) {}
    
    rpc createProduct(Product) returns (Product) {}
    rpc updateProduct(UpdateProduct) returns (Product) {}
    rpc deleteProduct(ProductId) returns (Product) {}
}

service ReviewsService {
    rpc getAllReviews (Empty) returns (Reviews) {}
    rpc getReviewById (ReviewId) returns (Review) {}
    rpc getProductsReviews(ProductId) returns (ProductsReviews) {}
    rpc getUserReviews (UserId) returns (UserReviews) {}

    rpc createReview (Review) returns (Review) {}
    rpc updateReview (UpdateReview) returns (Review) {}
    rpc deleteReview (ReviewId) returns (Review) {}
}

service PaymentService {
    rpc createPayment(UserId) returns (PaymentURL) {}
    rpc acceptPayment(CartParameters) returns (UserProduct) {}
}

message Empty {}

message User {
    string id = 1;
    string userName = 2;
    string email = 3;
    string password = 4;
    string role = 5;
    string image = 6;
    bool verify = 7;
    bool ban = 8;
}

message Product {
    string id = 1;
    string name = 2;
    string modelType = 3;
    string family = 4;
    string brand = 5;
    int32 price = 6;
    int32 stock = 7;
    bool disabled = 8;
    string type = 9;
    string description = 10;
    string mainImage = 11;
    repeated string images = 12;
    int32 amount = 13;
}

message Favorite {
    string id = 1;
    string userId = 2;
    string productId = 3;
}

message UserFavorites {
    string userId = 1;
    string productId = 2;
}

message Products {
    repeated Product products = 1;
}

message TotalPrice {
    int64 totalPrice = 1;
}

message ProductId {
    string productId = 1;
}


message UpdateProduct {
    string productId = 1;
    Product product = 2;
}

message UserProductRequest {
    string userId = 1;
    string productId = 2;
}

message UserProduct {
    string id = 1;
    string userId = 2;
    int64 total = 3;
    repeated Product products = 4;
    bool isPaid = 5;
}

message Users {
    repeated User users = 1;
}

message UserId {
    string id = 1;
}

message UserLogin {
    string email = 1;
    string password = 2;
}

message UserNetworkLogin {
    string userName = 1;
    string email = 2;
    string password = 3;
    string image = 4;
}

message LoginResponse {
    string token = 1;
}

message update {
    string userId = 1;
    User user = 2;
}

message Review {
    string id = 1;
    string title = 2;
    string comment = 3;
    int32 rating = 4;
    string productId = 5;
    string userId = 6;
}

message ReviewId {
    string reviewId = 1;
}

message Reviews {
    repeated Review reviews = 1;
}

message ProductsReviews {
    Product product = 1;
    repeated Review Reviews = 2;
}

message UserReview {
    Review userReviews = 1;
    Product userProduct = 2;
}

message UserReviews {
    repeated UserReview userReviews = 1;
}

message UpdateReview {
    string userId = 1;
    Review updateReview = 2; 
}

message CartParameters {
    string userId = 1;
    string cartId = 2;
}

message PaymentURL {
    string paymentURL = 1;
}